@@ -1,6 +1,6 @@
-<printer id="printer/HP-LaserJet_1022">
+<printer id="printer/HP-LaserJet_1022nw">
   <make>HP</make>
-  <model>LaserJet 1022</model>
+  <model>LaserJet 1022nw</model>
   <mechanism>
     <laser />
     <resolution>
@@ -27,11 +27,11 @@
   </lang>
   <autodetect>
     <general>
-      <ieee1284>MFG:Hewlett-Packard;MDL:HP LaserJet 1022;CMD:ACL;CLS:PRINTER;DES:HP LaserJet 1022;</ieee1284>
+      <ieee1284>MFG:Hewlett-Packard;MDL:HP LaserJet 1022nw;CMD:ACL;CLS:PRINTER;DES:HP LaserJet 1022nw;</ieee1284>
       <commandset>ACL</commandset>
-      <description>HP LaserJet 1022</description>
+      <description>HP LaserJet 1022nw</description>
       <manufacturer>Hewlett-Packard</manufacturer>
-      <model>HP LaserJet 1022</model>
+      <model>HP LaserJet 1022nw</model>
     </general>
   </autodetect>
   <functionality>A</functionality>
