@@ -1,5 +1,11 @@
 2010-02-09  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* printer/HP-LaserJet_1022.xml, printer/HP-LaserJet_1022n.xml,
+	  printer/HP-LaserJet_1022nw.xml: Added "n" and "nw" versions
+	  of the HP LaserJet 1022 so that printer setup tools choose
+	  the recommended "foo2zjs" driver instead of HPLIP for these
+	  printers (Ubuntu bug #250872).
+
 	* driver/foo2qpdl.xml, driver/pxlcolor.xml, driver/splix.xml,
 	  printer/Samsung-CLP-610ND.xml: The Samsung CLP-610ND is a PCL-XL
 	  printer but does not work with "pxlcolor" due to firmware
